// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFederatedSignInState returns the expected 'federatedSignIn\` state values for the 'signIn' route 1`] = `
{
  "entry": [
    "sendUpdate",
    "clearError",
  ],
  "invoke": {
    "onDone": {
      "target": "signIn",
    },
    "onError": {
      "actions": "setRemoteError",
      "target": "signIn",
    },
    "src": "signInWithRedirect",
  },
}
`;

exports[`getFederatedSignInState returns the expected 'federatedSignIn\` state values for the 'signUp' route 1`] = `
{
  "entry": [
    "sendUpdate",
    "clearError",
  ],
  "invoke": {
    "onDone": {
      "target": "signUp",
    },
    "onError": {
      "actions": "setRemoteError",
      "target": "signUp",
    },
    "src": "signInWithRedirect",
  },
}
`;
